# simple-howto-c-compiler-ximplec

./: .gitignore  CMakeLists.txt  README.md  run_all_tests.sh
.ctest_wrappers/: run_test.sh
0001-tokenizer/: README.md
0002-ast/: README.md
0003-ast/: README.md
0003-parser/: README.md
0004-codegen/: README.md
0005-integration/: README.md
0006-compound-assign/: README.md
0006-compound-assign/tests/: CMakeLists.txt  test_compound_assign.cpp
0007-ternary/: README.md
0007-ternary/tests/: CMakeLists.txt  test_ternary.cpp
0008-do-while/: README.md
0008-do-while/tests/: CMakeLists.txt  test_do_while.cpp
0009-comma-operator/: README.md
0009-comma-operator/tests/: CMakeLists.txt  test_comma_operator.cpp
0010-bool-type/: README.md
0010-bool-type/tests/: CMakeLists.txt  test_bool_type.cpp
0011-forward-decl/: README.md
0011-forward-decl/tests/: CMakeLists.txt  test_forward_decl.cpp
0012-const-qualifier/: README.md
0012-const-qualifier/tests/: CMakeLists.txt  test_const_qualifier.cpp
0013-type-system/: README.md
0014-sizeof/: README.md
0014-sizeof/tests/: CMakeLists.txt  test_sizeof.cpp
0015-signed-unsigned/: README.md
0015-signed-unsigned/tests/: CMakeLists.txt  test_signed_unsigned.cpp
0016-type-casts/: README.md
0016-type-casts/tests/: CMakeLists.txt  test_type_casts.cpp
0017-type-promotions/: README.md
0017-type-promotions/tests/: CMakeLists.txt  test_type_promotions.cpp
0018-type-aware-codegen/: README.md
0018-type-aware-codegen/tests/: CMakeLists.txt  test_type_aware_codegen.cpp
0019-string-literal-codegen/: README.md
0019-string-literal-codegen/tests/: CMakeLists.txt  test_string_literal_codegen.cpp
0020-global-variables/: README.md
0020-global-variables/tests/: CMakeLists.txt  test_global_variables.cpp
0021-extern-declarations/: README.md
0021-extern-declarations/tests/: CMakeLists.txt  test_extern_declarations.cpp
0022-struct-decl/: README.md
0022-struct-decl/tests/: CMakeLists.txt  test_struct_decl.cpp
0023-struct-access/: README.md
0023-struct-access/tests/: CMakeLists.txt  test_struct_access.cpp
0024-pointer-types/: README.md
0024-pointer-types/tests/: CMakeLists.txt  test_pointer_types.cpp
0025-array-types/: README.md
0025-array-types/tests/: CMakeLists.txt  test_array_types.cpp
0026-pointer-arithmetic/: README.md
0026-pointer-arithmetic/tests/: CMakeLists.txt  test_pointer_arithmetic.cpp
0027-unions/: README.md
0027-unions/tests/: CMakeLists.txt  test_unions.cpp
0028-enums/: README.md
0028-enums/tests/: CMakeLists.txt  test_enums.cpp
0029-typedef/: README.md
0030-switch-case/: README.md
0030-switch-case/tests/: CMakeLists.txt  test_switch_case.cpp
0031-goto-labels/: README.md
0031-goto-labels/tests/: CMakeLists.txt  test_goto_labels.cpp
0032-break-continue/: README.md
0032-break-continue/tests/: CMakeLists.txt  test_break_continue.cpp
0033-preprocessor-macros/: README.md
0033-preprocessor-macros/tests/: CMakeLists.txt  test_preprocessor_macros.cpp
0034-conditional-compilation/: README.md
0034-conditional-compilation/tests/: CMakeLists.txt  test_conditional_compilation.cpp
0035-include-directive/: README.md
0035-include-directive/tests/: CMakeLists.txt  test_include_directive.cpp
0036-function-pointers/: README.md
0036-function-pointers/tests/: CMakeLists.txt  test_function_pointers.cpp
0037-void-pointers/: README.md
0038-designated-init/: README.md
0039-compound-literals/: README.md
0040-bitfields/: README.md
0041-2d-arrays/: README.md
0041-multi-dim-arrays/: README.md
0042-array-pointer-decay/: README.md
0043-float-double/: README.md
0043-float-double-bit-pattern/: README.md
0043-float-double-sse/: README.md
0044-static-assert/: README.md
0045-generic/: README.md
0046-variadic/: README.md
0047-statement-expr/: README.md
0048-inline-asm/: README.md
0049-multi-file/: README.md
0050-static-linkage/: README.md
0051-volatile-qualifier/: README.md
0052-syscalls/: README.md
0053-string-funcs/: README.md
0054-io-functions/: README.md
0055-memory-alloc/: README.md
0056-file-io/: README.md
0057-process-control/: README.md
0058-socket-prog/: README.md
0059-signal-handling/: README.md
0060-environment/: README.md
0061-thread-support/: README.md
0062-synchronization/: README.md
0063-memory-mapping/: README.md
0064-dynamic-loading/: README.md
0065-ipc/: README.md
0066-const-folding/: README.md
0067-dead-code-elim/: README.md
0068-register-alloc/: README.md
0069-function-inline/: README.md
0070-debug-info/: README.md
0071-self-host-prep/: README.md
0072-compile-compiler-1/: README.md
0073-compile-compiler-2/: README.md
0074-compile-compiler-3/: README.md
0075-bootstrap/: README.md
0076-register-auto/: README.md
0077-restrict-qualifier/: README.md
0078-variadic-macros/: README.md
0079-token-pasting/: README.md
0080-pragma/: README.md
0081-standard-lib-stubs/: README.md
0082-statement-expr-gcc/: README.md
0083-label-as-value/: README.md
0084-attribute-gcc/: README.md
0085-builtin-functions/: README.md
0086-nested-functions/: README.md
0087-nd-arrays/: README.md
0088-string-concat/: README.md
0089-brace-init/: README.md
0089-for-comma/: README.md
0090-anonymous-enum/: README.md
0091-offsetof/: README.md
0091-typedef-funcptr/: README.md
0092-nested-struct-init/: README.md
0092-packed-struct/: README.md
0093-anonymous-enum/: README.md
0093-nd-array-init/: README.md
0094-typedef-funcptr/: README.md
0096-nd-array-init/: README.md
0097-designated-init-array/: README.md
0100-nd-arrays/: README.md
1000-c11-static-assert/: README.md
1001-c11-generic/: README.md
1002-c11-anon-structs/: README.md
1003-c11-anon-unions/: README.md
1004-c11-noreturn/: README.md
1005-c11-atomic/: README.md
1006-c11-threads/: README.md
1007-c11-memalign/: README.md
1008-c11-tgmath/: README.md
1009-c11-stdatomic/: README.md
1010-c11-thread-local/: README.md
1011-c11-bounds-checking/: README.md
1012-c11-static-assert-alias/: README.md
(+363 files in other folders)
