cmake_minimum_required(VERSION 3.14)
project(simplecc LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Fetch Catch2 for testing
include(FetchContent)
FetchContent_Declare(
    Catch2
    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
    GIT_TAG v3.4.0
)
FetchContent_MakeAvailable(Catch2)

# Main compiler library
add_library(compiler_lib
    src/lexer.cpp
    src/ast.cpp
    src/parser.cpp
    src/codegen.cpp
    src/preprocessor.cpp
    src/semantic.cpp
    src/compiler.cpp
)
target_include_directories(compiler_lib PUBLIC src)

# Main executable
add_executable(simplecc src/main.cpp)
target_link_libraries(simplecc compiler_lib)

# Tests
enable_testing()
add_subdirectory(0001-tokenizer/tests)
add_subdirectory(0002-ast/tests)
add_subdirectory(0003-parser/tests)
add_subdirectory(0004-codegen/tests)
add_subdirectory(0005-integration/tests)
add_subdirectory(0076-register-auto/tests)
add_subdirectory(0086-nested-functions/tests)
add_subdirectory(0043-float-double-bit-pattern/tests)
add_subdirectory(0043-float-double-sse/tests)
add_subdirectory(9999-parser-bugfixes/tests)
add_subdirectory(9999-codegen-coverage/tests)
add_subdirectory(9999-advanced-integration/tests)

add_subdirectory(0006-compound-assign/tests)
add_subdirectory(0007-ternary/tests)
add_subdirectory(0008-do-while/tests)
add_subdirectory(0009-comma-operator/tests)
add_subdirectory(0010-bool-type/tests)
add_subdirectory(0011-forward-decl/tests)
add_subdirectory(0012-const-qualifier/tests)
add_subdirectory(0013-type-system/tests)
add_subdirectory(0014-sizeof/tests)
add_subdirectory(0015-signed-unsigned/tests)
add_subdirectory(0016-type-casts/tests)
add_subdirectory(0017-type-promotions/tests)
add_subdirectory(0018-type-aware-codegen/tests)
add_subdirectory(0019-string-literal-codegen/tests)
add_subdirectory(0020-global-variables/tests)
add_subdirectory(0021-extern-declarations/tests)
add_subdirectory(0022-struct-decl/tests)
add_subdirectory(0023-struct-access/tests)
add_subdirectory(0024-pointer-types/tests)
add_subdirectory(0025-array-types/tests)
add_subdirectory(0026-pointer-arithmetic/tests)
add_subdirectory(0027-unions/tests)
add_subdirectory(0028-enums/tests)
add_subdirectory(0029-typedef/tests)
add_subdirectory(0030-switch-case/tests)
add_subdirectory(0031-goto-labels/tests)
add_subdirectory(0032-break-continue/tests)
add_subdirectory(0033-preprocessor-macros/tests)
add_subdirectory(0034-conditional-compilation/tests)
add_subdirectory(0035-include-directive/tests)
add_subdirectory(0036-function-pointers/tests)
add_subdirectory(0037-void-pointers/tests)
add_subdirectory(0038-designated-init/tests)
add_subdirectory(0039-compound-literals/tests)
add_subdirectory(0040-bitfields/tests)
add_subdirectory(0041-2d-arrays/tests)
add_subdirectory(0042-array-pointer-decay/tests)
add_subdirectory(0044-static-assert/tests)
add_subdirectory(0045-generic/tests)
add_subdirectory(0046-variadic/tests)
add_subdirectory(0047-statement-expr/tests)
add_subdirectory(0048-inline-asm/tests)
add_subdirectory(0049-multi-file/tests)
add_subdirectory(0050-static-linkage/tests)
add_subdirectory(0051-volatile-qualifier/tests)
add_subdirectory(0052-syscalls/tests)
add_subdirectory(0053-string-funcs/tests)
add_subdirectory(0054-io-functions/tests)
add_subdirectory(0055-memory-alloc/tests)
add_subdirectory(0056-file-io/tests)
add_subdirectory(0057-process-control/tests)
add_subdirectory(0058-socket-prog/tests)
add_subdirectory(0059-signal-handling/tests)
add_subdirectory(0060-environment/tests)
add_subdirectory(0061-thread-support/tests)
add_subdirectory(0062-synchronization/tests)
add_subdirectory(0063-memory-mapping/tests)
add_subdirectory(0064-dynamic-loading/tests)
add_subdirectory(0065-ipc/tests)
add_subdirectory(0066-const-folding/tests)
add_subdirectory(0067-dead-code-elim/tests)
add_subdirectory(0068-register-alloc/tests)
add_subdirectory(0069-function-inline/tests)
add_subdirectory(0070-debug-info/tests)
add_subdirectory(0071-self-host-prep/tests)
add_subdirectory(0072-compile-compiler-1/tests)
add_subdirectory(0073-compile-compiler-2/tests)
add_subdirectory(0074-compile-compiler-3/tests)
add_subdirectory(0075-bootstrap/tests)
add_subdirectory(1000-c11-static-assert/tests)
add_subdirectory(1001-c11-generic/tests)
add_subdirectory(1002-c11-anon-structs/tests)
add_subdirectory(1003-c11-anon-unions/tests)
add_subdirectory(1004-c11-noreturn/tests)
add_subdirectory(1005-c11-atomic/tests)
add_subdirectory(1006-c11-threads/tests)
add_subdirectory(1007-c11-memalign/tests)
add_subdirectory(1008-c11-tgmath/tests)
add_subdirectory(1009-c11-stdatomic/tests)
add_subdirectory(1010-c11-thread-local/tests)
add_subdirectory(1011-c11-bounds-checking/tests)
add_subdirectory(1012-c11-static-assert-alias/tests)
add_subdirectory(1013-c11-stdnoreturn/tests)
add_subdirectory(1014-c11-stdalign/tests)
add_subdirectory(1015-c11-stdatomic-complete/tests)
add_subdirectory(2000-c17-stdbool/tests)
add_subdirectory(2001-c17-stdalign/tests)
add_subdirectory(2002-c17-stdnoreturn/tests)
add_subdirectory(2003-c17-stdint/tests)
add_subdirectory(2004-c17-typeof/tests)
add_subdirectory(2005-c17-constexpr/tests)
add_subdirectory(3000-c23-bool-literal/tests)
add_subdirectory(3001-c23-auto-type/tests)
add_subdirectory(3002-c23-for-init-decl/tests)
add_subdirectory(3003-c23-empty-structs/tests)
add_subdirectory(3004-c23-digit-separators/tests)
add_subdirectory(3005-c23-binary-literals/tests)
add_subdirectory(3006-c23-preprocessor-embed/tests)
add_subdirectory(3007-c23-attribute/tests)
add_subdirectory(3008-c23-constexpr/tests)
add_subdirectory(3009-c23-nullptr/tests)
add_subdirectory(3010-c23-constexpr-func/tests)
add_subdirectory(3011-c23-auto-array/tests)
add_subdirectory(3012-c23-noreturn-attr/tests)
add_subdirectory(3013-c23-nodiscard/tests)
add_subdirectory(3014-c23-predef-macros/tests)
