cmake_minimum_required(VERSION 3.14)
project(0034_conditional_compilation_tests)

add_executable(test_conditional_compilation test_conditional_compilation.cpp)
target_include_directories(test_conditional_compilation PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_conditional_compilation PRIVATE compiler_lib Catch2WithMain)

include(../CTest.cmake OPTIONAL)
add_test(NAME test_conditional_compilation COMMAND test_conditional_compilation)
set_tests_properties(test_conditional_compilation PROPERTIES WILL_FAIL TRUE)
